--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  provider: ^6.1.2
+  file_picker: ^9.0.2
 
 dev_dependencies:
   flutter_test:
