--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   file_picker: ^9.0.2
   flutter_colorpicker: ^1.1.0
+  window_manager: ^0.4.3
 
 dev_dependencies:
   flutter_test:
