--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   file_picker: ^9.0.2
   flutter_colorpicker: ^1.1.0
   window_manager: ^0.4.3
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
