--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   window_manager: ^0.4.3
   path_provider: ^2.1.5
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
