--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   window_manager: ^0.4.3
   path_provider: ^2.1.5
   uuid: ^4.3.3
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
