--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.5
   uuid: ^4.3.3
   vector_math: ^2.1.4
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
