--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   uuid: ^4.3.3
   vector_math: ^2.1.4
   path: ^1.9.1
+  google_mlkit_face_detection: ^0.13.1
+  image: ^4.5.4
 
 dev_dependencies:
   flutter_test:
