--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path: ^1.9.1
   crypto: ^3.0.6
   image: ^4.1.7
+  super_drag_and_drop: ^0.9.1
 
 dev_dependencies:
   flutter_test:
